--- a/index.html
+++ b/index.html
@@ -22,23 +22,36 @@
 
     <section class="showcase">
       <div class="container grid">
-          <div class="showcase-text">
-              <h1>Easier Deployment</h1>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora consequatur quo fugit consectetur repellendus nisi, commodi cupiditate totam voluptas quod voluptatum soluta natus maxime perspiciatis quasi eveniet harum laudantium minima?</p>
-              <a href="features.html" class="btn btn-outline">Read More</a>
-
-              <div class="showcase-form card">
-                  <h2>Request a Demo</h2>
-                  <form>
-                      <div class="form-control">
-                          <input type="text" name="name" placeholder="Name" required>
-                          <input type="text" name="company" placeholder="Company Name" required>
-                          <input type="text" name="email" placeholder="Email" required>
-                          <input type="submit" value="Send" class="btn btn-primary">
-                      </div>
-                  </form>
-              </div>
-          </div>
+        <div class="showcase-text">
+          <h1>Easier Deployment</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora
+            consequatur quo fugit consectetur repellendus nisi, commodi
+            cupiditate totam voluptas quod voluptatum soluta natus maxime
+            perspiciatis quasi eveniet harum laudantium minima?
+          </p>
+          <a href="features.html" class="btn btn-outline">Read More</a>
+        </div>
+        <div class="showcase-form card">
+          <h2>Request a Demo</h2>
+          <form>
+            <div class="form-control">
+              <input type="text" name="name" placeholder="Name" required />
+            </div>
+            <div class="form-control">
+              <input
+                type="text"
+                name="company"
+                placeholder="Company Name"
+                required
+              />
+            </div>
+            <div class="form-control">
+              <input type="text" name="email" placeholder="Email" required />
+            </div>
+            <input type="submit" value="Send" class="btn btn-primary" />
+          </form>
+        </div>
       </div>
     </section>
   </body>
